--- a/references.bib
+++ b/references.bib
@@ -1702,5 +1702,15 @@ archivePrefix = "arXiv",
   }
 
 
-
+@article{0004-637X-606-2-819,
+  author={M. Markevitch and A. H. Gonzalez and D. Clowe and A. Vikhlinin and W. Forman and C. Jones and S. Murray and W. Tucker},
+  title={Direct Constraints on the Dark Matter Self-Interaction Cross Section from the Merging Galaxy Cluster 1E 0657–56},
+  journal={The Astrophysical Journal},
+  volume={606},
+  number={2},
+  pages={819},
+  url={http://stacks.iop.org/0004-637X/606/i=2/a=819},
+  year={2004}
+}
+	
 
