--- a/references.bib
+++ b/references.bib
@@ -1393,23 +1393,27 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2016arXiv160604548M,
+@ARTICLE{2017MNRAS.472.3177M,
    author = {{Meneghetti}, M. and {Natarajan}, P. and {Coe}, D. and {Contini}, E. and 
 	{De Lucia}, G. and {Giocoli}, C. and {Acebron}, A. and {Borgani}, S. and 
 	{Bradac}, M. and {Diego}, J.~M. and {Hoag}, A. and {Ishigaki}, M. and 
 	{Johnson}, T.~L. and {Jullo}, E. and {Kawamata}, R. and {Lam}, D. and 
 	{Limousin}, M. and {Liesenborgs}, J. and {Oguri}, M. and {Sebesta}, K. and 
 	{Sharon}, K. and {Williams}, L.~L.~R. and {Zitrin}, A.},
-    title = "{The Frontier Fields Lens Modeling Comparison Project}",
-  journal = {ArXiv e-prints},
+    title = "{The Frontier Fields lens modelling comparison project}",
+  journal = {\mnras},
 archivePrefix = "arXiv",
    eprint = {1606.04548},
- keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
-     year = 2016,
-    month = jun,
-   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160604548M},
+ keywords = {gravitational lensing: strong, gravitational lensing: weak, galaxies: clusters: general, galaxies: high-redshift},
+     year = 2017,
+    month = dec,
+   volume = 472,
+    pages = {3177-3216},
+      doi = {10.1093/mnras/stx2064},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.472.3177M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{2010A&A...514A..93M,
    author = {{Meneghetti}, M. and {Rasia}, E. and {Merten}, J. and {Bellagamba}, F. and 
