Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -918,8 +918,7 @@ Another lesson is that color information is very important.  Even with lower noi
 
 \section*{Acknowledgements}
 AS was supported by World Premier International Research Center Initiative (WPI Initiative), MEXT, Japan.
-RBM's research was partly part of project GLENCO, funded under the European Seventh Framework Programme, Ideas, Grant Agreement n. 259349.
-AT acknowledges receipt of an STFC postdoctoral research
+RBM's research was partly part of project GLENCO, funded under the European Seventh Framework Programme, Ideas, Grant Agreement n. 259349. AT acknowledges receipt of an STFC postdoctoral research
 assistantship.
 We thank the International Space Science Institute (ISSI) for hosting and funding our workshop.\footnote{http://www.issibern.ch/}
 JPK and CS acknowledge support from the ERC advanced grant LIDA and the ESA-NPI grant 491-2016.
@@ -930,7 +929,12 @@ NSFC, grant no.11503064, and Shanghai Natural Science Foundation,
 grant no. 15ZR1446700. This work was also supported in part by the
 Kavli Institute for Cosmological Physics at the University of Chicago
 through grant NSF PHY-1125897 and an endowment from the Kavli
-Foundation and its founder Fred Kavli.
+Foundation and its founder Fred Kavli. LVEK, CEP, CT and GV are supported through an NWO-VICI grant (project number 639.043.308). GVK acknowledges
+financial support from the Netherlands Research School for
+Astronomy (NOVA) and Target. Target is supported by
+Samenwerkingsverband Noord Nederland, European fund for regional
+development, Dutch Ministry of economic affairs, Pieken in de
+Delta, Provinces of Groningen and Drenthe. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% REFERENCES %%%%%%%%%%%%%%%%%%
