--- a/paper.tex
+++ b/paper.tex
@@ -823,7 +823,7 @@ CMU-DeepLens-ResNet get the best scores.
 
 \begin{figure*}
  \includegraphics[width=2\columnwidth]{figures/roc_ground.pdf}
- \caption{The ROC curves for the ground-based entries.  Notice that these are are generally better than in figure~\ref{fig:einstein_space} indicating that colour information is an important discriminant. }
+ \caption{The ROC curves for the ground-based entries.  Notice that these are generally better than in figure~\ref{fig:einstein_space} indicating that colour information is an important discriminant. }
  \label{fig:roc_ground}
 \end{figure*}
 
