--- a/references.bib
+++ b/references.bib
@@ -1643,3 +1643,18 @@ recurrent neural networks.},
 	Volume = {606},
 	Year = {2004},
 	Bdsk-Url-1 = {http://stacks.iop.org/0004-637X/606/i=2/a=819}}
+
+@ARTICLE{2001AJ....121..820G,
+   author = {{Graham}, A.~W.},
+    title = "{An Investigation into the Prominence of Spiral Galaxy Bulges}",
+  journal = {\aj},
+   eprint = {astro-ph/0011256},
+ keywords = {Galaxies: Dwarf, Galaxies: Formation, Galaxies: Fundamental Parameters, Galaxies: Photometry, Galaxies: Spiral, Galaxies: Structure},
+     year = 2001,
+    month = feb,
+   volume = 121,
+    pages = {820-840},
+      doi = {10.1086/318767},
+   adsurl = {http://adsabs.harvard.edu/abs/2001AJ....121..820G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
